# DA-Proj1

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main  out11.csv  out6.csv
data/: test_data.csv
include/: DataLoader.h  Menu.h
include/algorithms/: AssignmentExtractor.h  MaxFlow.h
include/graphics/: BatchMode.h  InteractiveMode.h  Menu.h
include/io/: AssignmentWriter.h  CsvUtils.h  DataEntryParsers.h  DataLoader.h  ErrorHandler.h  ErrorPrinter.h  OutputWriter.h  ParameterConfigParsers.h
include/logic/: AssignmentRunner.h  Control.h  DataActionUtils.h  DataFileLoader.h  FileLoader.h  NetworkBuilder.h  ParameterViewer.h  ReviewGraphBuilder.h  ReviewGraphExporter.h  ReviewGraphVisualizer.h  ReviewerViewer.h  RiskAnalyzer.h  SubmissionViewer.h
include/structs/: ConferenceData.h  Graph.h  Parameters.h  Reviewer.h  Submission.h
src/: DataLoader.cpp  Menu.cpp  main.cpp
src/graphics/: BatchMode.cpp  InteractiveMode.cpp  Menu.cpp
src/io/: CsvUtils.cpp  DataEntryParsers.cpp  DataLoader.cpp  ErrorHandler.cpp  ErrorPrinter.cpp  ParameterConfigParsers.cpp
src/logic/: AssignmentRunner.cpp  Control.cpp  DataActionUtils.cpp  DataFileLoader.cpp  FileLoader.cpp  ParameterViewer.cpp  ReviewGraphBuilder.cpp  ReviewGraphExporter.cpp  ReviewGraphVisualizer.cpp  ReviewerViewer.cpp  SubmissionViewer.cpp
